mione_plus: mount /system as rw first to support init.qcom.modem_links.sh

--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -47,7 +47,7 @@ on boot
 
 on emmc-fs
 # mount mmc partitions
-    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro barrier=1
+    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait rw barrier=1 noatime nodiratime
     wait /dev/block/platform/msm_sdcc.1/by-name/userdata
     exec /system/bin/sh /system/bin/mount_ext4.sh /dev/block/platform/msm_sdcc.1/by-name/userdata /data
     exec /system/bin/sh /system/bin/mount_ext4.sh /dev/block/platform/msm_sdcc.1/by-name/persist /persist
