mione_plus: update proprietary files
Change-Id: I97f040d50ceee211c86f7176914e8ead05ce1898

--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -389,8 +389,7 @@ service qcom-wifi /system/bin/sh /system/etc/init.qcom.wifi.sh
 
 on property:sys.boot_completed=1
     start qcom-post-boot
-# qcom-sh don't start automatically, then radio won't work
-    start qcom-sh
+    class_start late_start
 
 service atfwd /system/bin/ATFWD-daemon
     class late_start
