--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -7,7 +7,7 @@
 
 import init.qcom.rc
 
-# most of the following are from boot.img of mioneplus_QDR68
+# most of the following are from boot.img of mioneplus_QDS81
 
 on init
     export EXTERNAL_STORAGE /storage/sdcard0
@@ -28,37 +28,25 @@ on init
     symlink /storage/usbdisk0 /mnt/usbdisk0
 
 on boot
-    chown system system /sys/class/leds/flashlight/brightness
-    chmod 0666 /sys/class/leds/flashlight/brightness
-    chown system system /sys/class/timed_output/vibrator/pattern
-
 # Assign TCP buffer thresholds to be ceiling value of technology maximums
 # Increased technology maximums should be reflected here.
     write /proc/sys/net/core/rmem_max  3461120
     write /proc/sys/net/core/wmem_max  3461120
 
-# for bluetooth
-    setprop ro.kernel.wifi_module 4330
+    class_start late_start
 
 on emmc-fs
 # mount mmc partitions
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait rw barrier=1 noatime nodiratime
+    wait /dev/block/platform/msm_sdcc.1/by-name/userdata
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/userdata /data relatime nosuid nodev barrier=1 journal_checksum noauto_da_alloc
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/persist /persist relatime nosuid nodev barrier=1 journal_checksum noauto_da_alloc
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/cache /cache relatime nosuid nodev barrier=1 journal_checksum noauto_da_alloc
     #Setting permissons for misc partition
     chmod 0666 /dev/block/platform/msm_sdcc.1/by-name/misc
 
-on post-fs-data
-# double check /data/radio
-    mkdir /data/radio 0770 radio radio
-    chmod 2770 /data/radio
-# support for hostapd
-    mkdir /data/misc/wifi/hostapd 0777 wifi wifi
-
-
 on charger
-    mount ext4 syspart /system wait ro barrier=1
+    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro barrier=1
     write /sys/module/rpm_resources/enable_low_power/L2_cache 1
     write /sys/module/rpm_resources/enable_low_power/pxo 1
     write /sys/module/rpm_resources/enable_low_power/vdd_dig 2
@@ -77,30 +65,19 @@ on charger
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed 192000
     write /sys/devices/system/cpu/cpu1/online 0
     setprop sys.usb.config adb
-    class_start charger
 
-
-service chargeonlymode /sbin/chargeonlymode
-    class charger
-
-
-on property:sys.mione.battlevel=low
-    stop thermald
-    write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 594000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 972000
-    write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 200000000
-
-
-on property:sys.mione.battlevel=high
-    write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 266667000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2000000
-    write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 2000000
-    start thermald
-
-
-service fmradio /system/bin/fmradioserver
+service dbus /system/bin/dbus-daemon --system --nofork
     class main
+    socket dbus stream 660 bluetooth bluetooth
+    user bluetooth
     group bluetooth net_bt_admin
+
+service bluetoothd /system/bin/bluetoothd -n
+    class main
+    socket bluetooth stream 660 bluetooth bluetooth
+    socket dbus_bluetooth stream 660 bluetooth bluetooth
+    # init.rc does not yet support applying capabilities, so run as root and
+    # let bluetoothd drop uid to bluetooth with the right linux capabilities
+    group bluetooth net_bt_admin misc
+    disabled
 
