--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -37,6 +37,7 @@ on boot
 # Increased technology maximums should be reflected here.
     write /proc/sys/net/core/rmem_max  3461120
     write /proc/sys/net/core/wmem_max  3461120
+    start wifi_module
 
 # for bluetooth
 #    setprop ro.kernel.wifi_module 4330
@@ -84,7 +85,6 @@ on charger
 service chargeonlymode /sbin/chargeonlymode
     class charger
 
-
 on property:sys.mione.battlevel=low
     stop thermald
     write /sys/devices/system/cpu/cpu1/online 1
@@ -105,3 +105,5 @@ service fmradio /system/bin/fmradioserver
     class main
     group bluetooth net_bt_admin
 
+service wifi_module /system/bin/sh /init.wifi.sh
+    class main
