mione_plus: fix warning in logcat
Change-Id: I66ef07ca699e270c48c37d328e2849f9e0069a58

--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -53,6 +53,8 @@ on post-fs-data
 # support for hostapd
     mkdir /data/misc/wifi/hostapd 0777 wifi wifi
 
+# InputMethodManagerService
+    mkdir /data/system/inputmethod 0755 system system
 
 on charger
     mount ext4 syspart /system wait ro barrier=1
