Revert "mione_plus: don't start hciattach on boot"
This reverts commit 3e5f80a05d3cc8b9a3b67e371d13e6caa1fa5a1f.

--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -213,6 +213,7 @@ on property:ro.emmc=1
     start rmt_storage
 
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --baudrate 3000000 --patchram /etc/firmware/bcm4329.hcd /dev/ttyHS0
+    class late_start
     user bluetooth
     group qcom_oncrpc bluetooth net_bt_admin
     disabled
