--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -28,8 +28,9 @@ on init
     symlink /storage/usbdisk0 /mnt/usbdisk0
 
 on boot
+    chown system system /sys/class/leds/backlight/brightness
     chown system system /sys/class/leds/flashlight/brightness
-    chmod 0666 /sys/class/leds/flashlight/brightness
+    chown system system /sys/class/leds/torch-flash/brightness
     chown system system /sys/class/timed_output/vibrator/pattern
 
 # Assign TCP buffer thresholds to be ceiling value of technology maximums
