--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -119,6 +119,9 @@ on boot
     # Allow write permission for rtc wakealarm
     chmod 0666 /sys/class/rtc/rtc0/wakealarm
 
+    # start qcom-sh as early as possiable, needed by bt
+    start qcom-sh
+
 # import cne init file
 on post-fs
     import /persist/init.cne.rc
@@ -365,8 +368,8 @@ on property:drmdiag.load=0
     stop drmdiag
 
 service qcom-sh /system/bin/sh /init.qcom.sh
-    class late_start
     user root
+    disabled
     oneshot
 
 service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
