--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -24,6 +24,7 @@ on init
 on boot
     chown system system /sys/class/leds/backlight/brightness
     chown system system /sys/class/leds/flashlight/brightness
+    chmod 0666 /sys/class/leds/flashlight/brightness
     chown system system /sys/class/leds/torch-flash/brightness
     chown system system /sys/class/timed_output/vibrator/pattern
     chown root radio /proc/cmdline
