mione_plus: make radio work
Change-Id: I382d02ec418f5aa50ba15a8c07082b9c14faa2a2

--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -209,7 +209,7 @@ service rmt_storage /system/bin/rmt_storage
     user root
     disabled
 
-on property:ro.emmc=1
+on property:ro.boot.emmc=true
     start rmt_storage
 
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --baudrate 3000000 --patchram /etc/firmware/bcm4329.hcd /dev/ttyHS0
