--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -66,6 +66,14 @@ on post-fs-data
 # InputMethodManagerService
     mkdir /data/system/inputmethod 0755 system system
 
+on property:sys.boot_completed=1
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor conservative
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1512000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor conservative
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 1512000
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 384000
+
 on charger
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro barrier=1
     write /sys/module/rpm_resources/enable_low_power/L2_cache 1
