--- a/ramdisk/init.target.rc
+++ b/ramdisk/init.target.rc
@@ -27,23 +27,9 @@
 #
 #
 
-
-on fs
-#    mount_all fstab.msm8660
-
-    # Keeping following partitions outside fstab file. As user may not have
-    # these partition flashed on the device. Failure to mount any partition in fstab file
-    # results in failure to launch late-start class.
-
-    mount ext4 syspart /system wait ro barrier=1
-    wait /dev/block/platform/msm_sdcc.1/by-name/userdata
-    exec /system/bin/sh /system/bin/mount_ext4.sh /dev/block/platform/msm_sdcc.1/by-name/userdata /data
-    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/persist /persist nosuid nodev barrier=1
-    exec /system/bin/sh /system/bin/mount_ext4.sh /dev/block/platform/msm_sdcc.1/by-name/cache /cache
-    mount vfat /dev/block/platform/msm_sdcc.1/by-name/modem /firmware ro shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
-
-    #Setting permissons for misc partition
-    chmod 0666 /dev/block/platform/msm_sdcc.1/by-name/misc
+on early-init
+    mkdir /firmware 0771 system system
+    symlink /data/tombstones /tombstones
 
 on post-fs-data
     mkdir /data/tombstones 0771 system system
