fix LCD brightness sundenly change
Change-Id: Ia53c5d0bd6105229c59ec73eef968ba1af4e5df8

--- a/ramdisk/init.target.rc
+++ b/ramdisk/init.target.rc
@@ -81,7 +81,7 @@ service qosmgrd /system/bin/qosmgr /system/etc/qosmgr_rules.xml
     group system
     disabled
 
-service thermald /system/bin/thermald
+service thermald /system/bin/thermald --norestorebrightness
     class late_start
     user root
     group root
