mione_plus: mount /firmware for modem
Change-Id: I5acc7ca0e85dd7ec087d968aa3f506a44b91f97e

--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -59,6 +59,13 @@ on fs
     #Setting permissons for misc partition
     chmod 0666 /dev/block/platform/msm_sdcc.1/by-name/misc
 
+# modem firmware
+    mount vfat /dev/block/mmcblk0p1 /firmware ro shortname=lower
+# make modem firmware available at /vendor/firmware/image ( /vendor symlink to /system/vendor )
+    mkdir /system/vendor/firmware/ 0755 system system
+    symlink /firmware/image /system/vendor/firmware/image
+    exec /system/bin/sh /system/etc/init.qcom.modem_links.sh
+
 on post-fs-data
 # double check /data/radio
     mkdir /data/radio 0770 radio radio
