--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -47,6 +47,8 @@ on boot
     write /proc/sys/net/core/rmem_max  3461120
     write /proc/sys/net/core/wmem_max  3461120
 
+    chmod 0444 /proc/cmdline
+
     class_start late_start
 
 on fs
