--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -26,7 +26,6 @@
 #
 
 import init.qcom.usb.rc
-import init.target.rc
 
 on init
     # Set permissions for persist partition
@@ -473,7 +472,7 @@ service atfwd /system/bin/ATFWD-daemon
     class late_start
     user system
     group system radio
-    onrestart /system/bin/log -t RIL-ATFWD -p w "ATFWD daemon restarted"
+    onrestart exec /system/bin/log -t RIL-ATFWD -p w "ATFWD daemon restarted"
     disabled
 
 service hdmid /system/bin/hdmid
