--- a/configs/gps.conf
+++ b/configs/gps.conf
@@ -1,3 +1,6 @@
+#fix GPS for XiaoMi MiOne
+#China
+NTP_SERVER=cn.pool.ntp.org
 #Test
 NTP_SERVER=time.gpsonextra.net
 #Asia
@@ -7,16 +10,16 @@ NTP_SERVER=time.gpsonextra.net
 #North America
 # NTP_SERVER=north-america.pool.ntp.org
 
-XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra.bin
-XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra.bin
-XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra.bin
+XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra2.bin
+XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra2.bin
+XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra2.bin
 
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
-DEBUG_LEVEL = 3
+DEBUG_LEVEL = 0
 
 # Intermediate position report, 1=enable, 0=disable
-INTERMEDIATE_POS=0
+INTERMEDIATE_POS=1
 
 # supl version 1.0
 SUPL_VER=0x10000
@@ -36,15 +39,20 @@ CAPABILITIES=0x27
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-# ACCURACY_THRES=5000
+ACCURACY_THRES=5000
+
+# Report supl ref location as position, 1=enable, 0=disable
+REPORT_POSITION_USE_SUPL_REFLOC=1
 
 ################################
 ##### AGPS server settings #####
 ################################
 
 # FOR SUPL SUPPORT, set the following
-# SUPL_HOST=supl.host.com or IP
-# SUPL_PORT=1234
+SUPL_HOST=suplcn.sirf.com
+SUPL_PORT=7275
+SUPL_NO_SECURE_PORT=7275
+SUPL_SECURE_PORT=7275
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
@@ -96,3 +104,12 @@ ENABLE_WIPER=1
 # 0: Enable RRLP on LTE(Default) 1: Enable LPP_User_Plane on LTE
 LPP_PROFILE = 0
 
+#################################
+##### AGPS Carrier settings #####
+#################################
+CURRENT_CARRIER=common
+DEFAULT_AGPS_ENABLE=TRUE
+DEFAULT_SSL_ENABLE=FALSE
+
+# TRUE for "User Plane", FALSE for "Control Plane"
+DEFAULT_USER_PLANE=TRUE
