mione_plus: update sdcard configure
Change-Id: I6eba9ab625bfde46387c1ae5e5e016046d87742a

--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -14,9 +14,8 @@ on init
 # create mountpoints
     mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
     mkdir /mnt/media_rw/usbdisk0 0700 media_rw media_rw
-    mkdir /storage 0775 system system
-    mkdir /storage/sdcard0 0775 system system
-    mkdir /storage/usbdisk0 0775 system system
+    mkdir /storage/sdcard0 0700 root root
+    mkdir /storage/usbdisk0 0700 root root
     mkdir /vendor/firmware 0775 system system
 
 # for backwards compatibility
